// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadio.vue should not render aria-label attribute with no label value on input group 1`] = `

<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="false"
           role="radio"
           type="radio"
           name="name"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
    <i aria-hidden="true"
       class="v-icon material-icons theme--light"
    >
      radio_button_unchecked
    </i>
  </div>
  <label aria-hidden="true"
         class="v-label theme--light"
         style="left: 0px; position: relative;"
  >
  </label>
</div>

`;

exports[`VRadio.vue should render aria-label attribute with label value on input group 1`] = `

<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-label="Test"
           aria-checked="false"
           role="radio"
           type="radio"
           name="name"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
    <i aria-hidden="true"
       class="v-icon material-icons theme--light"
    >
      radio_button_unchecked
    </i>
  </div>
  <label aria-hidden="true"
         class="v-label theme--light"
         style="left: 0px; position: relative;"
  >
    Test
  </label>
</div>

`;

exports[`VRadio.vue should render proper input name 1`] = `

<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="false"
           role="radio"
           type="radio"
           name="name"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
    <i aria-hidden="true"
       class="v-icon material-icons theme--light"
    >
      radio_button_unchecked
    </i>
  </div>
  <label aria-hidden="true"
         class="v-label theme--light"
         style="left: 0px; position: relative;"
  >
  </label>
</div>

`;

exports[`VRadio.vue should render role and aria-checked attributes on input group 1`] = `

<div class="v-radio theme--light accent--text">
  <div class="v-input--selection-controls__input">
    <input aria-checked="true"
           role="radio"
           type="radio"
           name="name"
    >
    <div class="v-input--selection-controls__ripple accent--text">
    </div>
    <i aria-hidden="true"
       class="v-icon material-icons theme--light accent--text"
    >
      radio_button_unchecked
    </i>
  </div>
  <label aria-hidden="true"
         class="v-label theme--light"
         style="left: 0px; position: relative;"
  >
  </label>
</div>

`;

exports[`VRadio.vue should render themed component 1`] = `

<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="false"
           role="radio"
           type="radio"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
    <i aria-hidden="true"
       class="v-icon material-icons theme--light"
    >
      radio_button_unchecked
    </i>
  </div>
  <label aria-hidden="true"
         class="v-label theme--light"
         style="left: 0px; position: relative;"
  >
  </label>
</div>

`;

exports[`VRadio.vue should use custom icons 1`] = `

<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="false"
           role="radio"
           type="radio"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
    <i aria-hidden="true"
       class="v-icon material-icons theme--light"
    >
      bar
    </i>
  </div>
  <label aria-hidden="true"
         class="v-label theme--light"
         style="left: 0px; position: relative;"
  >
  </label>
</div>

`;

exports[`VRadio.vue should use custom icons 2`] = `

<div class="v-radio theme--light accent--text">
  <div class="v-input--selection-controls__input">
    <input aria-checked="true"
           role="radio"
           type="radio"
    >
    <div class="v-input--selection-controls__ripple accent--text">
    </div>
    <i aria-hidden="true"
       class="v-icon material-icons theme--light accent--text"
    >
      bar
    </i>
  </div>
  <label aria-hidden="true"
         class="v-label theme--light"
         style="left: 0px; position: relative;"
  >
  </label>
</div>

`;
